[metadata]
name = blockfinder
author = Jacob Appelbaum
summary = Blockfinder enumerates network information for countries.
license = BSD
home-page = https://github.com/ioerror/blockfinder
classifier =
          Development Status :: 4 - Beta
          Environment :: Console
          Intended Audience :: Developers
          Operating System :: OS Independent
          Programming Language :: Python
          Programming Language :: Python :: 2.6
          Programming Language :: Python :: 2.7
          Programming Language :: Python :: 3
          Programming Language :: Python :: 3.3
          Programming Language :: Python :: 3.4
          Programming Language :: Python :: 3.5
          License :: OSI Approved :: BSD License

[files]
packages =
    block_finder

[bdist_wheel]
universal = 1
